package Structural_Pattern.Bridge_Pattern.Practice5.Implementer;

public interface InterfacePlane {
    void fly();
}
